--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -42,7 +42,7 @@
                 </td>
                 <td>
                   <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">
-                    Launch demo modal
+                    Poser une question
                   </button>
 
                   <!-- Modal -->
