ajout text area dans formulaire

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -99,6 +99,71 @@
       </div>
     </div>
   </div>
+
+  <!-- Formulaires questions -->
+  <form>
+    <h4>Formulaire question</h4>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" placeholder="Regular" class="form-control">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <div class="input-group mb-4">
+            <textarea class="form-control form-control-alternative" rows="3" placeholder="Rédiger votre question"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+
+
+  <!-- Formulaire Evaluation -->
+  <form>
+    <h4>Formulaire évaluation</h4>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" placeholder="Regular" class="form-control" disabled="">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <div class="input-group mb-4">
+            <textarea class="form-control form-control-alternative" rows="3" placeholder="Write a large text here ..."></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <div class="input-group mb-4">
+            <input class="form-control" placeholder="Birthday" type="text">
+            <div class="input-group-append">
+              <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+
+
   <!-- Table questions étudiants -->
   <div class="row  mb-5">
     <div class="col">
