--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -106,13 +106,21 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
+          <select class="custom-select">
+            <option selected>Sélectionner une catégorie</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>        </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <input type="text" placeholder="Regular" class="form-control">
-        </div>
+          <select class="custom-select">
+            <option selected>Sélectionner un enseignant</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>        </div>
       </div>
     </div>
     <div class="row">
@@ -133,13 +141,21 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
+          <select class="custom-select">
+            <option selected>Sélectionner un cours</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>        </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <input type="text" placeholder="Regular" class="form-control" disabled="">
-        </div>
+          <select class="custom-select">
+            <option selected>Sélectionner un enseignant</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>        </div>
       </div>
     </div>
     <div class="row">
@@ -153,10 +169,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <div class="input-group mb-4">
-            <input class="form-control" placeholder="Birthday" type="text">
-            <div class="input-group-append">
-              <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
-            </div>
+            <input class="btn btn-primary btn-sm" type="file" name="image">
           </div>
         </div>
       </div>
