--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,68 +1,163 @@
-<div class="main-content">
-  <div class="container-fluid">
+<br><br><br>
+
+<div class="card" style="width: 80%;">
+  <div class="card-body">
+    <h2 class="card-title">Ajouter un compte</h2>
+    <form (ngSubmit)="save()">
+      <input type="text" placeholder="id_personne" [(ngModel)]="compte.personne" name ="personne">
       <div class="row">
-          <div class="col-md-8">
-              <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title">Ajouter un compte</h4>
-                  </div>
-                  <div class="card-body">
-                      <form (ngSubmit)="save()">
-                          <div class="row">
-                              <div class="col-md-2">
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Numero du compte" type="text" [(ngModel)]="compte.numeroCompte" name="numeroCompte">
-                                </mat-form-field>
-                              </div>
-                              <div class="col-md-2">
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Statut" type="text" [(ngModel)]="compte.statut" name="statut">
-                                </mat-form-field>
-                              </div>
-                              <button mat-raised-button class="btn btn-danger pull-right">Ajouter</button>
-                              <div class="clearfix"></div>
-                              </div>
-                          </form>
-                      </div>
-                  </div>
-              </div>
-       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="card">
-              <div class="card-header card-header-danger">
-                  <h4 class="card-title ">Affichage/Supression des comptes</h4>
-                  <p class="card-category"> ***Mode admin***</p>
-              </div>
-              <div class="card-body">
-                  <div class="table-responsive">
-                      <table class="table">
-                          <thead class=" text-primary">
-                              <th>
-                                  Numero du cmpte
-                              </th>
-                              <th>
-                                  Statut
-                              </th>
-                              <th>
-                                  Action
-                              </th>
-                          </thead>
-                          <tbody>
-                            <tr *ngFor="let co of comptes">
-                                <td>{{co.numeroCompte}}</td>
-                                <td>{{co.statut}}</td>
-                                <td><button class="btn btn-danger pull-right" (click)="delete(u.idUtilisateur)">Delete</button></td>
-                            </tr>
-                          </tbody>
-                      </table>
-                  </div>
-              </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Numero du compte" [(ngModel)]="compte.numeroCompte" name ="numeroCompte">
           </div>
+        </div>
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Statut" [(ngModel)]="compte.statut" name ="statut">
+          </div>
+        </div>
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Nom" [(ngModel)]="personne.nom" name ="nom">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Prenom" [(ngModel)]="personne.prenom" name ="prenom">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="Date" placeholder="Date de naissance" [(ngModel)]="personne.dateNaissance" name ="dateNaissance">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Email" [(ngModel)]="personne.email" name ="email">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Numéro de téléphone" [(ngModel)]="personne.numeroTel" name ="numeroTel">
+          </div>
+        </div>
+      </div>
+      <!--
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Adresse" [(ngModel)]="personne.adressePersonne.rue" name ="rue">
+          </div>
+        </div>
+      </div>-->
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Identifiant" [(ngModel)]="personne.username" name ="username">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" placeholder="Mot de passe" [(ngModel)]="personne.password" name ="password">
+          </div>
+        </div>
+      </div>
+      <button class="btn btn-primary" type="submit">Ajouter un nouveau compte</button>
+      <div class="clearfix"></div>
+    </form>
   </div>
 </div>
 
 
 
+<div class="table-responsive">
+  <table class="table align-items-center table-flush">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">Numero du compte</th>
+        <th scope="col">Status</th>
+        <th scope="col">Date de naissance</th>
+        <th scope="col">Email</th>
+        <th scope="col">Numero de téléphone</th>
+        <!--<th scope="col">Adresse</th>-->
+        <th scope="col">Identifiant</th>
+        <th scope="col">Mot de passe</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let c of comptes" >
+        <th scope="row">
+          <div class="media align-items-center">
+            <a href="#" class="avatar rounded-circle mr-3">
+              <img alt="Image placeholder" src="assets/img/theme/bootstrap.jpg">
+            </a>
+            <div class="media-body">
+              <span class="mb-0 text-sm">Argon Design System</span>
+            </div>
+          </div>
+        </th>
+        <td>
+          $2,500 USD
+        </td>
+        <td>
+          <span class="badge badge-dot mr-4">
+            <i class="bg-warning"></i> pending
+          </span>
+        </td>
+        <td>
+          <div class="avatar-group">
+            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Ryan Tompson">
+              <img alt="Image placeholder" src="assets/img/theme/team-1-800x800.jpg" class="rounded-circle">
+            </a>
+            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Romina Hadid">
+              <img alt="Image placeholder" src="assets/img/theme/team-2-800x800.jpg" class="rounded-circle">
+            </a>
+            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Alexander Smith">
+              <img alt="Image placeholder" src="assets/img/theme/team-3-800x800.jpg" class="rounded-circle">
+            </a>
+            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Jessica Doe">
+              <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
+            </a>
+          </div>
+        </td>
+        <td>
+          <div class="d-flex align-items-center">
+            <span class="mr-2">60%</span>
+            <div>
+              <div class="progress">
+                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+              </div>
+            </div>
+          </div>
+        </td>
+        <td class="text-right">
+          <div ngbDropdown placement="bottom-right">
+            <a class="btn btn-sm btn-icon-only text-light"  ngbDropdownToggle>
+              <i class="fas fa-ellipsis-v"></i>
+            </a>
+            <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
