--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -135,7 +135,7 @@
                 <td>{{e.Commentaire}}</td>
                 <td>{{e.cours}}</td>
                 <td>{{e.personne.id}}</td>
-                <td><button class="btn btn-danger">Supprimer</button></td>
+                <td><button (click)="deleteEvaluation(e.idEvaluation)" class="btn btn-danger">Supprimer</button></td>
               </tr>
             </tbody>
           </table>
@@ -231,7 +231,7 @@
                   <td>{{q.question}}</td>
                   <td>{{q.categorie}}</td>
                   <td>{{q.personne.id}}</td>
-                  <td><button class="btn btn-danger">Supprimer</button></td>
+                  <td><button (click)="deleteQuestion(q.idQuestion)" class="btn btn-danger">Supprimer</button></td>
                 </tr>
               </tbody>
             </table>
