modif fonction delete pour rendre la sup ok + ajout boutton sup dans le.html

--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -126,7 +126,7 @@
           <td>{{p.numeroTel}}</td>
           <td>{{p.username}}</td>
           <td>{{p.password}}</td>
-          <td><button class="btn btn-danger pull-right" (click)="deletePersonne(p.idPersonne)">Supprimer le compte ?</button></td>
+          <td><button class="btn btn-danger pull-right" (click)="delete(p.id)">Supprimer le compte ?</button></td>
 
          <!--<td>
           <div class="avatar-group">
