--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -182,10 +182,9 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <select class="custom-select" name="categorie" id="" [(ngModel)]="question.categorie">
-              <option selected>Sélectionner une catégorie</option>
-              <option [ngValue]="q" *ngFor="let q of questions">{{q.categorie}}</option>
-            </select>
+            <div class="form-group">
+              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Entrer une catégorie"  name="categorie" id="" [(ngModel)]="question.categorie">
+            </div>
           </div>
         </div>
         <div class="col-md-6">
