--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -4,7 +4,6 @@
   <div class="card-body">
     <h2 class="card-title">Ajouter un compte</h2>
     <form (ngSubmit)="save()">
-      <input type="text" placeholder="id_personne" [(ngModel)]="compte.personne" name ="personne">
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
@@ -19,6 +18,16 @@
           </div>
         </div>
       </div>
+
+      <td>Roles</td>
+                <td>
+                    <select multiple name="roles" [(ngModel)]="personne.roles">
+                        <option *ngFor="let r of roles" [ngValue]="r">
+                            {{r.libelleRole}}
+                        </option>
+                    </select>
+                </td>
+
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
@@ -76,6 +85,9 @@
           </div>
         </div>
       </div>
+
+     
+
       <button class="btn btn-primary" type="submit">Ajouter un nouveau compte</button>
       <div class="clearfix"></div>
     </form>
@@ -83,6 +95,8 @@
 </div>
 
 
+<br>
+<h2 class="card-title">Gestion des comptes</h2>
 
 <div class="table-responsive">
   <table class="table align-items-center table-flush">
@@ -98,74 +112,25 @@
         <!--<th scope="col">Adresse</th>-->
         <th scope="col">Identifiant</th>
         <th scope="col">Mot de passe</th>
+        <th scope="col">Roles</th>
         <th scope="col">Action</th>
 
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let c of comptes, let p of personnes" >
-          <th scope="row">
-            <div class="media align-items-center">
-              <a href="#" class="avatar rounded-circle mr-3">
-               <img alt="Image placeholder" src="assets/img/theme/bootstrap.jpg">
-              </a>
-              <div class="media-body">
-                 <span class="mb-0 text-sm">{{c.numeroCompte}}</span>
-              </div>
-            </div>
-          </th>
-          <td>
-            <span class="badge badge-dot mr-4">
-              <i class="bg-warning"></i> {{c.statut}}
-            </span>
-          </td>
-          <td>{{p.nom}}</td>
-          <td>{{p.prenom}}</td>
-          <td>{{p.dateNaissance}}</td>
-          <td>{{p.email}}</td>
-          <td>{{p.numeroTel}}</td>
-          <td>{{p.username}}</td>
-          <td>{{p.password}}</td>
+      <tr *ngFor="let p of personnes ; let i = index" >
+          <td>{{comptes[i].numeroCompte}}</td>
+          <td>{{comptes[i].statut}}</td>
+          <td>{{personnes[i].nom}}</td>
+          <td>{{personnes[i].prenom}}</td>
+          <td>{{personnes[i].dateNaissance}}</td>
+          <td>{{personnes[i].email}}</td>
+          <td>{{personnes[i].numeroTel}}</td>
+          <td>{{personnes[i].username}}</td>
+          <td>{{personnes[i].password}}</td>
+          <!--<td>{{p.roles.libelleRole}}</td> -->
           <td><button class="btn btn-danger pull-right" (click)="delete(p.id)">Supprimer le compte ?</button></td>
 
-         <!--<td>
-          <div class="avatar-group">
-            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Ryan Tompson">
-              <img alt="Image placeholder" src="assets/img/theme/team-1-800x800.jpg" class="rounded-circle">
-            </a>
-            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Romina Hadid">
-              <img alt="Image placeholder" src="assets/img/theme/team-2-800x800.jpg" class="rounded-circle">
-            </a>
-            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Alexander Smith">
-              <img alt="Image placeholder" src="assets/img/theme/team-3-800x800.jpg" class="rounded-circle">
-            </a>
-            <a href="#" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Jessica Doe">
-              <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
-            </a>
-          </div>
-          </td>-->
-         <!--<td>
-          <div class="d-flex align-items-center">
-            <span class="mr-2">60%</span>
-            <div>
-              <div class="progress">
-                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-              </div>
-            </div>
-          </div>
-         </td>
-         <td class="text-right">
-          <div ngbDropdown placement="bottom-right">
-            <a class="btn btn-sm btn-icon-only text-light"  ngbDropdownToggle>
-              <i class="fas fa-ellipsis-v"></i>
-            </a>
-            <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
-          </td>-->
       </tr>
     </tbody>
   </table>
