--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
 </div>
 <!-- Page content -->
 <div class="container-fluid mt--7">
-  <!-- Table enseignant -->
+  <!-- Table enseignant visible par étudiant -->
   <div class="row  mb-5">
     <div class="col">
       <div class="card shadow">
