--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -23,7 +23,7 @@
                 <th scope="col">Numéro de téléphone</th>
               </tr>
             </thead>
-            <tbody class="text-center">
+            <tbody>
               <tr *ngFor="let u of users">
                 <th scope="row">
                   <div class="media align-items-center">
