mise en page du formulaire page connexion

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -279,5 +279,5 @@
 </div>
 
 <div [hidden]="authenticated()">
-  <p>Connectez-vous pour afficher le contenu</p>
+  <p><a [routerLink]="['/authentification']">Connectez-vous</a> pour afficher le contenu</p>
 </div>
