--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -21,6 +21,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-6 col-md-8">
       <div class="card bg-secondary shadow border-0">
+        <!--
         <div class="card-header bg-transparent pb-5">
           <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
           <div class="text-center">
@@ -34,19 +35,24 @@
             </a>
           </div>
         </div>
+      -->
+        
         <div class="card-body px-lg-5 py-lg-5">
+          <!--
           <div class="text-center text-muted mb-4">
             <small>Or sign up with credentials</small>
           </div>
-          <form role="form">
+            -->
+          <form (submit)="login()">
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="Name" type="text">
+                <input class="form-control" [(ngModel)]="credentials.username" placeholder="Username" type="text" name="username">
               </div>
             </div>
+            <!--
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
@@ -55,16 +61,19 @@
                 <input class="form-control" placeholder="Email" type="email">
               </div>
             </div>
+            -->
             <div class="form-group">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password">
+                <input class="form-control" placeholder="Password" type="password" [(ngModel)]="credentials.password" name="password">
               </div>
             </div>
+             <!--
             <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
             <div class="row my-4">
+             
               <div class="col-12">
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id="customCheckRegister" type="checkbox">
@@ -74,8 +83,9 @@
                 </div>
               </div>
             </div>
+              -->
             <div class="text-center">
-              <button type="button" class="btn btn-primary mt-4">Create account</button>
+              <button class="btn btn-primary mt-4">Se connecter</button>
             </div>
           </form>
         </div>
