--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -28,27 +28,29 @@
         <!-- Navbar items -->
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/dashboard']">
+            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/espace-enseignant']">
               <i class="ni ni-planet"></i>
-              <span class="nav-link-inner--text">Dashboard</span>
+              <span class="nav-link-inner--text">Espace enseignant</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/register']">
+            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/contacts']">
               <i class="ni ni-circle-08"></i>
-              <span class="nav-link-inner--text">Register</span>
+              <span class="nav-link-inner--text">Contacts</span>
             </a>
           </li>
+          <!--
           <li class="nav-item">
             <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/login']">
               <i class="ni ni-key-25"></i>
               <span class="nav-link-inner--text">Login</span>
             </a>
           </li>
+          -->
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/user-profile']">
+            <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/espace-compte']">
               <i class="ni ni-single-02"></i>
-              <span class="nav-link-inner--text">Profile</span>
+              <span class="nav-link-inner--text">Espace compte</span>
             </a>
           </li>
         </ul>
