--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -3,8 +3,10 @@
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
-          <h1 class="text-white">Welcome!</h1>
-          <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p>
+          <h1 class="text-white">Bonjour !</h1>
+          <p class="text-lead text-light">Bienvenue sur la plateforme E-University, votre université digitale.
+            Pour accéder aux fonctionnalités de l'application veuillez vous connecter !
+          </p>
         </div>
       </div>
     </div>
